<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="15dp">
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/fontstyle"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/txt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/enter_your_category"
        android:fontFamily="@font/fontstyle"
        android:textColorHint="#7E8E6B"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightgreen"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/fontstyle"
            android:layout_weight="1"
            android:id="@+id/btn_cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightgreen"
            android:text="@string/okay"
            android:fontFamily="@font/fontstyle"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14ssp"
            android:layout_weight="1"
            android:id="@+id/btn_okay"/>
    </LinearLayout>
</LinearLayout>