<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LauncherActivity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/round"
            android:contentDescription="@string/todo1" />
        <ImageView
            android:id="@+id/vendor_image"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:background="@drawable/checker"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textColor="@color/lightgreen"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/fontstyle"/>
        <TextView
            android:id="@+id/TextRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendor_registration"
            android:textColor="@color/lightgreen"
            android:gravity="center"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/fontstyle"/>
        <EditText
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:background="@color/editBack"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:padding="@dimen/_7ssp"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColorHint="@color/lightgreen"
            android:fontFamily="@font/fontstyle"
            android:autofillHints="username"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_e_mail"
            android:background="@color/editBack"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:padding="@dimen/_7ssp"
            android:textColorHint="@color/lightgreen"
            android:fontFamily="@font/fontstyle"
            android:autofillHints="emailAddress"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_no"
            android:background="@color/editBack"
            android:textColor="@color/black"
            android:singleLine="true"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:imeOptions="actionNext"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:inputType="phone"
            android:layout_marginTop="@dimen/_10ssp"
            android:padding="@dimen/_7ssp"
            android:textColorHint="@color/lightgreen"
            android:fontFamily="@font/fontstyle"
            android:autofillHints="phone"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password"
            android:layout_marginTop="@dimen/_10ssp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:hintEnabled="false"
            >
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:background="@color/editBack"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_gravity="center"
                android:textSize="@dimen/_16ssp"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_10ssp"
                android:padding="@dimen/_7ssp"
                android:textColorHint="@color/lightgreen"
                android:fontFamily="@font/fontstyle"
                android:autofillHints="password"/>

        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            android:background="@color/editBack"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:padding="@dimen/_7ssp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:textColorHint="@color/lightgreen"
            android:fontFamily="@font/fontstyle"
            android:autofillHints="password"/>
        <Button
            android:id="@+id/register_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightgreen"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:textColor="@color/white"
            android:padding="@dimen/_7ssp"
            android:layout_marginEnd="@dimen/_33sdp"
            android:layout_marginStart="@dimen/_33sdp"
            android:text="@string/create_an_account"
            android:fontFamily="@font/fontstyle"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/_100sdp"
            android:background="@drawable/ellipse_44"/>
    </LinearLayout>
</LinearLayout>


