<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:theme="@style/Widget.AppCompat.Toolbar.Button.Navigation"
    tools:openDrawer="start"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/editBack1"
android:orientation="vertical">
<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/barHome"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:navigationIcon="@null"
        android:id="@+id/tool"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:background="@color/editBack1"
        >
        <TextView
            android:id="@+id/homeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_22ssp"
            android:fontFamily="@font/fontstyle"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:padding="@dimen/_3ssp"
            android:layout_gravity="start"
            android:text="@string/home" />
        <ImageView
            android:id="@+id/user_log1"
            android:layout_width="@dimen/_34ssp"
            android:layout_height="@dimen/_36ssp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:background="@drawable/marketing"
            android:contentDescription="@string/vendor" />
        <ImageView
            android:id="@+id/homeSearchFragment"
            android:layout_width="@dimen/_30ssp"
            android:layout_height="@dimen/_32ssp"
            android:layout_marginEnd="@dimen/_4ssp"
            android:backgroundTint="@color/lightgreen"
            android:layout_gravity="end"
            android:background="@drawable/search"
            android:layout_toStartOf="@+id/user_log1"
            android:contentDescription="@string/user" />

    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
            android:id="@+id/relativeSearch"
            android:visibility="visible"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:visibility="gone"
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:focusable="true"
                android:gravity="center|start"
                android:paddingStart="@dimen/_5ssp"
                android:padding="@dimen/_3ssp"
                android:background="@drawable/newborder"
                android:hint="@string/search"
                android:layout_marginTop="@dimen/_8ssp"
                android:fontFamily="@font/fontstyle"
                android:layout_marginStart="@dimen/_15ssp"
                android:layout_marginEnd="@dimen/_15ssp"
                android:textColorHint="@color/lightgreen"
                android:drawableTint="@color/lightgreen"
                android:inputType="textFilter"/>

            <ImageButton
                android:visibility="gone"
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/search"
                android:layout_alignBottom="@id/search"
                android:background="@null"
                android:src="@drawable/cancel_icon"/>
        </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="@dimen/_12ssp"
    android:orientation="horizontal">
    <View
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_1ssp"
        android:background="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendors"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/background"
        android:paddingHorizontal="@dimen/_20ssp"
        android:fontFamily="@font/fontstyle"/>
    <View
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_1ssp"
        android:background="@color/black"/>
</LinearLayout>



<ImageView
    android:id="@+id/found1"
    android:layout_margin="@dimen/_50sdp"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="@dimen/_200sdp"
    android:layout_gravity="center"
    android:visibility="gone"
    android:background="@drawable/found"
    android:contentDescription="@string/timer"/>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/home_recycle"/>
</LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:theme="@style/AppTheme_simple_login_splace"
        android:visibility="visible"
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/sidebar"
        app:headerLayout="@layout/header"/>
</androidx.drawerlayout.widget.DrawerLayout>