<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LauncherActivity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/round"/>
        <ImageView
            android:id="@+id/vendor_image"
            android:layout_marginBottom="@dimen/_10ssp"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:background="@drawable/checker"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textColor="@color/lightgreen"
            android:gravity="center"
            android:padding="@dimen/_5ssp"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/fontstyle"/>
        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendor_login"
            android:textColor="@color/lightgreen"
            android:gravity="center"
            android:padding="@dimen/_5ssp"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/fontstyle"/>
        <EditText
            android:id="@+id/emailLogin"
            android:hint="@string/e_mail"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/editBack"
            android:textColor="@color/black"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:padding="@dimen/_7ssp"
            android:layout_marginBottom="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:textColorHint="@color/lightgreen"
            android:fontFamily="@font/fontstyle"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password"
            android:layout_marginTop="@dimen/_10ssp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:background="@color/editBack"
                android:fontFamily="@font/fontstyle"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/_7ssp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/lightgreen"
                android:textSize="@dimen/_16ssp"
                android:autofillHints="password" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/_5ssp"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightgreen"
            android:layout_marginEnd="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_34sdp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:padding="@dimen/_8ssp"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/fontstyle"/>
        <ImageView
            android:id="@+id/sign_in_button"
            android:layout_width="@dimen/_30ssp"
            android:layout_height="@dimen/_30ssp"
            android:visibility="gone"
            android:background="@drawable/google"
            android:layout_marginTop="@dimen/_5ssp"
            android:layout_gravity="center"/>

        <!--            <TextView
                        android:layout_marginTop="@dimen/_5ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/lightgreen"
                        android:text="@string/forget_password"
                        android:gravity="center"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10ssp"
                android:text="@string/ask"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/_13ssp"
                />
            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_1ssp"
                android:background="@color/black"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightgreen"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_5ssp"
            android:textColor="@color/white"
            android:text="@string/create_an_account"
            android:padding="@dimen/_8ssp"
            android:layout_marginEnd="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_34sdp"
            android:fontFamily="@font/fontstyle"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:background="@drawable/ellipse_44"/>




    </LinearLayout>
</LinearLayout>


